# libcsp

./: CMakeLists.txt  README.bindings  wscript
cmake/: sources.cmake
examples/: python_bindings_example.py  python_bindings_example_client.py  python_bindings_example_server.py  python_bindings_example_srv.py
include/csp/: csp_types.h
src/: csp_io.c  csp_route.c
src/bindings/python/: pycsp.c
src/bindings/python/libcsp/: __init__.py
